# CTranslate2

./: .gitmodules  CMakeLists.txt
examples/llama/: CMakeLists.txt  main.cc
